# mara-storage

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: build.yaml
.scripts/: install.mk
docs/: api.rst  conf.py  config.rst  index.rst  installation.rst  manage-storages.md  storages-overview.md  testing-framework.rst
docs/storages/: azure.rst  gcs.rst  local.rst  sftp.rst
mara_storage/: __init__.py  azure.py  cli.py  client.py  compression.py  config.py  google_cloud_storage.py  info.py  local_storage.py  manage.py  sftp.py  shell.py  storages.py
mara_storage/integrations/: deltalake.py  fsspec.py
tests/: local_config.py.example  test_azcopy.py  test_gcs.py  test_gcs_module_client.py  test_gcs_shell_client.py  test_local_storage.py  test_sftp.py
