[metadata]
name = mara-storage
version = attr: mara_storage.__version__
url = https://github.com/mara/mara-storage
description = Configuration of storage connections for mara
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT
project_urls =
    Source Code = https://github.com/mara/mara-storage
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = mara_storage
python_requires = >= 3.6
install_requires =
    click

[options.extras_require]
test = pytest
sftp = pysftp
google-cloud-storage = google-cloud-storage; google-oauth
